Update readme & Fix shortcut problem

--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "electron-quick-start",
+  "name": "mongodb-easy-backup",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Backup MongoDB Atlas database to your computer easily",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
+  "repository": "https://github.com/nisaruj/mongodb-easy-backup",
+  "keywords": [],
+  "author": "nisaruj",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^2.0.0"
+    "electron": "^2.0.5"
   },
   "dependencies": {
     "bootstrap": "^4.1.2",
